# homebox-mcp-server

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/homebox_mcp/: __init__.py  __main__.py  client.py  normalizer.py  server.py
tests/: test_client.py  test_create_item_two_step.py  test_normalizer.py  test_server_routes.py
