[project]
name = "homebox-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for Homebox (sysadminsmedia/homebox) inventory management"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Claw", email = "claw@anigeek.com" },
]
keywords = ["mcp", "homebox", "inventory", "claude", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.9",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/Nasawa/homebox-mcp-server"
Issues = "https://github.com/Nasawa/homebox-mcp-server/issues"
Source = "https://github.com/Nasawa/homebox-mcp-server"

[project.scripts]
homebox-mcp = "homebox_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/homebox_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
